@@ -32,3 +32,5 @@ export { getCookie, setCookie } from './src/cookies.js';
 export { default as relativeNextDate} from './src/date-relative.js';
 export { datesFromTo } from './src/dates-from-to.js';
 export { arrayToCsv } from './src/array-to-csv.js';
+export { domBuilder } from './src/dom-builder.js';
+export { classnames } from './src/classnames.js';
