@@ -41,3 +41,4 @@
 2025-06-03T15:21:22.928Z |           1.15.5 | fix
 2025-07-18T13:45:22.198Z |           1.16.0 | array to csv
 2025-07-18T13:51:02.677Z |           1.16.1 | fix
+2025-07-28T10:57:23.083Z |           1.17.0 | classnames & domBuilder
